@@ -2,6 +2,7 @@
 
 = 5.1.0 =
 * WordPress 6.8 compatible.
+* Fixed declaration of dynamic properties of the Affiliates_Pagination class.
 
 = 5.0.0 =
 * WordPress 6.7 compatible.
